--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.abhi.grammyquiz.MainActivity">
+    tools:context="com.example.abhi.grammyquiz.QuestionActivity">
 
 
 
@@ -20,14 +20,6 @@
         android:layout_marginBottom="92dp"
         android:layout_alignParentTop="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Play!"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/imageView1"
-        android:layout_alignParentStart="true"
-        android:onClick="onClickPlay"/>
+
 
 </RelativeLayout>
