--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -9,17 +9,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.abhi.grammyquiz.QuestionActivity">
 
-
-
-    <ImageView
-
-        android:id="@+id/imageView1"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
+
+
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/albums"
-        android:layout_marginBottom="92dp"
-        android:layout_alignParentTop="true" />
-
-
+        android:text="NEXT"
+        android:id="@+id/button2"
+        android:onClick="onClickNext"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
