--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -12,13 +12,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/innervisions"
-            android:layout_marginBottom="92dp"
+            android:layout_marginBottom="10dp"
             android:layout_alignParentTop="true" />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="What year did this album win the Grammy Award for Album of the Year?"
+            android:id="@+id/imagequestion"
+            android:layout_below="@+id/innervisions"
+            android:layout_centerHorizontal="true" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NEXT"
+            android:text="SUBMIT"
             android:id="@+id/button2"
             android:onClick="onClickNext"
             android:layout_alignParentBottom="true"
@@ -26,5 +33,14 @@
             android:layout_alignParentStart="true">
 
         </Button>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:layout_below="@+id/imagequestion"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </FrameLayout>
