--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,20 @@
 
     <ImageView
 
-        android:id="@+id/imageView1"
+        android:id="@+id/main_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/albums"
-        android:layout_marginBottom="92dp"
         android:layout_alignParentTop="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play!"
-        android:id="@+id/button"
+        android:text="@string/play_button"
+        android:id="@+id/start_button"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/imageView1"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:onClick="onClickPlay"/>
 
 </RelativeLayout>
